# AgriLo-

./: .gitignore  Readme.md
backend/: env.example  pyproject.toml  requirements.txt
backend/src/: flows.py  main.py
backend/src/auth/: auth_utils.py
backend/src/db/: __init__.py  chat_models.py
backend/src/ext_apis/: crop_health_api.py  soil_api.py  weather_api.py
backend/src/models/: chat.py  soil.py
backend/src/routes/: chat.py  crop_health.py  maps.py  recommend.py  soil_data.py  user.py  weather_forecast.py
backend/src/services/: audio_service.py  chat_service.py  llm_service.py  transalation_service.py  tts_service.py
frontend/: env.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth-options/: page.tsx
frontend/src/app/crop-recommendation/: page.tsx
frontend/src/app/language-selection/: page.tsx
frontend/src/app/main-page/: page.tsx
frontend/src/app/main-page/components/: calendar-page.tsx  chat-page.tsx  home-page.tsx  monitor-page.tsx
frontend/src/app/map-section/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/user-registration/: page.tsx
frontend/src/components/: Home_page.tsx  RecommendationDisplay.tsx  theme-provider.tsx
frontend/src/components/Page_Components/: About_Section.tsx  Hero_Section_Two.tsx  Key_F.tsx  Other_Sections.tsx  Solution_Section.tsx
frontend/src/contexts/: AuthContext.tsx  DiagnosisContext.tsx  LanguageContext.tsx
frontend/src/lib/: api.ts
frontend/src/utils/: formatRecommendation.ts  geometry.ts
(+1 files in other folders)
